--- a/package.json
+++ b/package.json
@@ -4,13 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --open",
+    "start": "webpack-dev-server --hot --inline --progress --open",
     "build": "WEBPACK_ENV=production webpack --progress --hide-modules",
     "test": "jest"
   },
   "devDependencies": {
+      
+    "autoprefixer-loader": "^3.1.0",
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.0",
+   
+    "babel-core": "^6.4.0",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-preset-es2015": "^6.3.13",
+    "react-hot-loader": "^1.3.0",
+    "react-transform-hmr": "^1.0.1",
+    
     "jest": "^0.1.40",
     "jest-cli": "^11.0.0",
+    
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
     "typings": "^0.7.12",
